--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <div class="container">
         <h1 class="logo">Gustavo<span>.</span></h1>
 
-        <nav id="nav">
+        <nav>
             <a href="#home">Início</a>
             <a href="#sobre">Sobre</a>
             <a href="#skills">Skills</a>
@@ -22,10 +22,7 @@
             <a href="#contato" class="btn">Contato</a>
         </nav>
 
-        <!-- BOTÃO DARK MODE -->
-        <button id="theme-toggle" aria-label="Alternar tema">
-            🌙
-        </button>
+        <button id="theme-toggle">🌙</button>
     </div>
 </header>
 
@@ -34,8 +31,8 @@
         <h2>Olá, eu sou</h2>
         <h1>Gustavo Fraga</h1>
         <p>
-            Estudante de Ciência da Computação focado em desenvolvimento
-            e em busca da primeira oportunidade de estágio.
+            Estudante de Ciência da Computação com foco em desenvolvimento de software, 
+            em busca da primeira oportunidade de estágio para aplicar e aprimorar conhecimentos técnicos.
         </p>
 
         <div class="hero-actions">
@@ -49,9 +46,8 @@
     <div class="container">
         <h2 class="section-title">Sobre mim</h2>
         <p class="section-text">
-            Sou estudante do 5º semestre de Ciência da Computação, com interesse em
-            desenvolvimento de software. Tenho experiência com Java, C e desenvolvimento web.
-            Busco um estágio onde eu possa aprender, evoluir e contribuir com soluções reais.
+           Tenho 19 anos e sou estudante do 5º semestre de Ciência da Computação. Desde cedo sou apaixonado por games e tecnologia, o que despertou meu interesse pela área de desenvolvimento de software. 
+           Gosto de aprender na prática, enfrentar novos desafios e evoluir constantemente, buscando aplicar meus conhecimentos em projetos reais e no ambiente profissional.
         </p>
     </div>
 </section>
@@ -61,12 +57,12 @@
         <h2 class="section-title">Habilidades</h2>
 
         <div class="skills-grid">
-            <div class="skill-card">Java</div>
-            <div class="skill-card">C</div>
-            <div class="skill-card">HTML</div>
-            <div class="skill-card">CSS</div>
-            <div class="skill-card">JavaScript</div>
-            <div class="skill-card">Manutenção de Computadores</div>
+            <div class="skill-card"><h4>Java</h4></div>
+            <div class="skill-card"><h4>C</h4></div>
+            <div class="skill-card"><h4>HTML</h4></div>
+            <div class="skill-card"><h4>CSS</h4></div>
+            <div class="skill-card"><h4>JavaScript</h4></div>
+            <div class="skill-card"><h4>Manutenção de Computadores</h4></div>
         </div>
     </div>
 </section>
@@ -76,12 +72,23 @@
         <h2 class="section-title">Projetos</h2>
 
         <div class="projects-grid">
+
             <div class="project-card">
                 <h3>Sistema em Java</h3>
                 <p>
                     Projeto acadêmico focado em orientação a objetos,
                     lógica de programação e organização de código.
                 </p>
+
+                <div class="project-actions">
+                    <a href="https://github.com/gustafraga/nome-do-repositorio"
+                       target="_blank"
+                       class="btn-outline">GitHub</a>
+
+                    <a href="https://github.com/gustafraga/nome-do-repositorio#readme"
+                       target="_blank"
+                       class="btn">Demo</a>
+                </div>
             </div>
 
             <div class="project-card">
@@ -90,7 +97,17 @@
                     Site desenvolvido com HTML, CSS e JavaScript,
                     com foco em design moderno, responsivo e acessível.
                 </p>
+
+                <div class="project-actions">
+                    <a href="https://github.com/gustafraga/portfolio"
+                       target="_blank"
+                       class="btn-outline">GitHub</a>
+
+                    <a href="#"
+                       class="btn">Live</a>
+                </div>
             </div>
+
         </div>
     </div>
 </section>
@@ -99,23 +116,18 @@
     <div class="container">
         <h2 class="section-title">Contato</h2>
 
-        <p class="section-text">
-            Estou disponível para oportunidades de estágio.
-            Entre em contato pelos canais abaixo.
-        </p>
-
         <div class="contato-grid">
             <div class="contato-card">
                 <span>Email</span>
-                <a href="mailto:gustavofraga@email.com">
-                    gustavofraga@email.com
+                <a href="mailto:gustavomlfraga@gmail.com">
+                    gustavomlfraga@gmail.com
                 </a>
             </div>
 
             <div class="contato-card">
                 <span>GitHub</span>
-                <a href="https://github.com/seuusuario" target="_blank">
-                    github.com/seuusuario
+                <a href="https://github.com/gustafraga" target="_blank">
+                    github.com/gustafraga
                 </a>
             </div>
         </div>
@@ -129,3 +141,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+
